--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="keywords" content="Friend Chan, Friend Bot, A Discord Bot, Bot Discord, บอท Friend Chan, บอทเฟรนจัง, เล่นบอท, เล่นกับบอทเฟรน, บอทดิสคอร์ด, บอทไลน์, LINE Bot, LINE Bot Friend Chan, สอนบอทพูด, เกมส์แชทบอท, บอทเพลง, Music Bot, บอทคนไทย, Thai Bot, Bot Developer, Bot IoT, Bot Machine Learning, Friend RPG, FRIENDRPG, Chakung, Facebook Bot, Messenger Bot, บอทเฟสบุ๊ก, บอทน่ารัก, บอทมาใหม่, บอทดาวน์โหลด, บอทอัตโนมัติ, Auto Bot, Auto Reply Bot, Bot Chakung, บอทชาคุง, ชาคุง, บอทเกมอนิเมะ, บอทเกม, เล่น เกมส์, เกมส์ ฟรี, เกมส์ ออนไลน์, เล่น เกมส์ แชทบอท ออนไลน์, Node.js, Express, Instant Messaging">
     <meta name="theme-color" content="#3399ff">
     <meta name="msapplication-TileColor" content="#3399ff">
-    <meta name="msapplication-TileImage" content="/static/icons/mstile-144x144.png">
-    <meta name="msapplication-config" content="/static/icons/browserconfig.xml">
+    <meta name="msapplication-TileImage" content="./images/Avatar.jpg"><!--mstile-144x144.png">-->
+    <meta name="msapplication-config" content="./images/Avatar.jpg"><!--browserconfig.xml">-->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -22,27 +22,27 @@
     <meta property="og:title" content="Friend Chan's Dashboard">
     <meta property="og:description" content="Friend Chan made with ❤ by ChaKung.">
     <meta property="og:image" content="./images/Avatar.jpg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="194x194" href="/static/icons/favicon-194x194.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/static/icons/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/icons/favicon-16x16.png">
-    <link rel="manifest" href="/static/icons/manifest.json">
-    <link rel="mask-icon" href="/static/icons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/static/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/Avatar.jpg"><!--apple-touch-icon.png">-->
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/Avatar.jpg"><!--favicon-32x32.png">-->
+    <link rel="icon" type="image/png" sizes="194x194" href="./images/Avatar.jpg"><!--favicon-194x194.png">-->
+    <link rel="icon" type="image/png" sizes="192x192" href="./images/Avatar.jpg"><!--android-chrome-192x192.png">-->
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/Avatar.jpg"><!--favicon-16x16.png">-->
+    <link rel="manifest" href="./images/manifest.json">
+    <link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#3399ff">
+    <link rel="shortcut icon" href="./images/favicon.ico">
     <link rel="icon" href="./images/Avatar.jpg" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300?v=1" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css?v=1">
-    <link rel="stylesheet" href="./css/cha.css">
-    <link rel="stylesheet" href="./css/bulma.css?v=1">
-    <link rel="stylesheet" href="./css/bulma-divider.css?v=1">
+    <link rel="stylesheet" href="./css/cha.css?v=3">
+    <link rel="stylesheet" href="./css/bulma.css?v=3">
+    <link rel="stylesheet" href="./css/bulma-divider.css?v=3">
     
   </head>
   <body>
     <div class="scrolltop"><span><i class="fa fa-angle-up sts"></i></span></div>
     <nav class="navbar is-white" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="index.html">
+        <a class="navbar-item" href="./">
           <img id="dashboard-icon" src="./images/Avatar.jpg?v=1" style="border-radius: 100%;width: 30px;vertical-align: bottom;margin-right:5px;">&nbsp;<div style="font-size: 21px">Friend Chan | เฟรนจัง</div>
         </a>
         <button class="button navbar-burger is-white" data-target="navMenu">
@@ -130,7 +130,7 @@
             COPYRIGHT © 2018 FRIENDRPG ALL RIGHTS RESERVED.
         </div>
     </div>
-    <script src="./js/cha.js?v=2"></script>
+    <script src="./js/cha.js?v=3"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js?v=1"></script>
     
   </body>
