--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
     <link rel="stylesheet" href="./css/cha.css?v=3">
     <link rel="stylesheet" href="./css/bulma.css?v=3">
     <link rel="stylesheet" href="./css/bulma-divider.css?v=3">
-    
   </head>
   <body>
     <div class="scrolltop"><span><i class="fa fa-angle-up sts"></i></span></div>
@@ -53,11 +52,11 @@
       </div>
       <div class="navbar-menu is-white" id="navMenu">
         <div class="navbar-start is-white">
-          <a class="navbar-item is-white" href="./dashboard"><span><i class="fa fa-home" aria-hidden="true"></i></span>&nbsp;Dashboard</a>
+          <a class="navbar-item is-white" href="./"><span><i class="fa fa-home" aria-hidden="true"></i></span>&nbsp;Dashboard</a>
           <a class="navbar-item" href="./intro"><span><i class="fa fa-book" aria-hidden="true"></i></span>&nbsp;Introduction</a>
-          <a class="navbar-item" href="./support"><span><i class="fa fa-comments" aria-hidden="true"></i></span>&nbsp;Support</a>
-          <a class="navbar-item" href="./link"><span><i class="fa fa-link" aria-hidden="true"></i></span>&nbsp;About</a>
           <a class="navbar-item" href="./command"><span><i class="fa fa-code" aria-hidden="true"></i></span>&nbsp;Commands</a>
+          <a class="navbar-item" href="./support"><span><i class="fa fa-comments" aria-hidden="true"></i></span>&nbsp;Support</a>
+          <a class="navbar-item" href="./about"><span><i class="fa fa-link" aria-hidden="true"></i></span>&nbsp;About</a>
           <a class="navbar-item" href="https://discord.gg/49ksd4V" target="_blank"><img src="./images/Discord.png?v=1" alt="Discord Server"/></a>
 		  <p class="navbar-item" style="font-size: 13px">Wants to help the development of the bot ? Consider donating<a class="donate" href="./donate">&nbsp;here</a>.</p>
         </div>
@@ -95,7 +94,6 @@
       	  <br>
       	</div>
 		<br>
-		
 		<div class="card">
           <div class="card-content">
             <h1 class="title">
@@ -132,6 +130,5 @@
     </div>
     <script src="./js/cha.js?v=3"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js?v=1"></script>
-    
   </body>
 </html>
