--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="icon" href="./images/Avatar.jpg" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300?v=1" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css?v=1">
-    <link rel="stylesheet" href="./css/cha.css?v=3">
+    <link rel="stylesheet" href="./css/cha.css">
     <link rel="stylesheet" href="./css/bulma.css?v=3">
     <link rel="stylesheet" href="./css/bulma-divider.css?v=3">
   </head>
@@ -57,9 +57,9 @@
           <a class="navbar-item" href="./command"><span><i class="fa fa-code" aria-hidden="true"></i></span>&nbsp;Commands</a>
           <a class="navbar-item" href="./support"><span><i class="fa fa-comments" aria-hidden="true"></i></span>&nbsp;Support</a>
           <a class="navbar-item" href="./about"><span><i class="fa fa-link" aria-hidden="true"></i></span>&nbsp;About</a>
-          <a class="navbar-item" href="https://discord.gg/49ksd4V" target="_blank"><img src="./images/Discord.png?v=1" alt="Discord Server"/></a>
-		  <p class="navbar-item" style="font-size: 13px">Wants to help the development of the bot ? Consider donating<a class="donate" href="./donate">&nbsp;here</a>.</p>
-        </div>
+          <a class="navbar-item" href="#lang"><span><i class="fa fa-language" aria-hidden="true"></i></span>&nbsp;TH</a>
+          <a class="navbar-item" href="https://discord.gg/49ksd4V" target="_blank"><img src="https://discordapp.com/api/guilds/354311142492864522/embed.png?v=1" alt="Discord Server"/></a>
+		</div>
         <div class="navbar-end is-transparent">
           <a class="navbar-item" href="./login">
             <span><i class="fa fa-sign-in" aria-hidden="true"></i></span>&nbsp;Login
@@ -72,7 +72,7 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <img src="./images/Avatar.jpg?v=1" class="avatar">
-          <h1 class="title has-text-dark title-favcolor">Friend Chan</h1>
+          <h1 class="title title-favcolor">Friend Chan</h1>
           <h2 class="subtitle has-text-dark">Chatbot made with love by ChaKung.</h2>
           <a class="button is-favcolor is-medium is-outlined" href="./download" role="button" style="margin-right:20px">
             <span><i class="fa fa-plus" aria-hidden="true"></i></span>&nbsp;Invite
@@ -94,9 +94,9 @@
       	  <br>
       	</div>
 		<br>
-		<div class="card">
+		<div class="card fav">
           <div class="card-content">
-            <h1 class="title">
+            <h1 class="title title-favcolor">
               Statistics
             </h1>
             <nav class="level">
@@ -121,6 +121,13 @@
     <div class="container is-fluid has-text-centered">
         <!--<iframe id="fb_widget" style="width: 100%; height: 350px;" src="http://www.facebook.com/plugins/page.php?href=https://www.facebook.com/aottgdf&tabs=timeline,messages&height=450&colorscheme=dark&show_faces=true&header=false&stream=false&show_border=false"></iframe>
         -->
+      friendchan
+      dashboard
+      introduction
+      commands
+      support
+      about
+      th
     </div>
     </footer>
     <div class="footer-copyright">
